# freight-cli

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
alphaloops/: AGENTS.md
alphaloops/cli/: __init__.py  carriers_cmd.py  codegen.py  contacts_cmd.py  crashes_cmd.py  fleet_cmd.py  inspections_cmd.py  output.py  state.py
tests/: conftest.py  test_codegen.py  test_commands.py  test_config.py
